// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateStudioSubHeader tests should match snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-medium StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main subHeaderLeftView"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="template-library"
              >
                <svg
                  height="20"
                  viewBox="0 0 12 13"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target Text--targetClass"
                >
                  <p
                    class="StyledProps--font StyledProps--main templateName StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold"
                    tabindex="0"
                  >
                    Test Template
                  </p>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey800"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="bp3-popover-wrapper DropDown--main versionDropDown"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                  data-testid="dropdown-button"
                  style="min-width: 130px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main container"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body"
                            style="--text-line-clamp: 1;"
                          >
                            v1
                          </p>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                COMMON.STABLE
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="SplitButton--splitButton"
              >
                <button
                  aria-label="save"
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main SplitButton--main border-right-0 Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="send-data"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 9 12"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                        fill="#25A6F7"
                      />
                      <path
                        d="M.5.775h7.005v.2H.5v-.2z"
                        stroke="#25A6F7"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    save
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main SplitButton--dropdown border-left-0 Button--with-current-color Button--iconOnly Button--withRightIcon Button--variation Button--variation-primary"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <button
                aria-label="common.discard"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    aria-label="pipeline menu actions"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="currentColor"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="2"
                          cy="2"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="8"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="14"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot in read only mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-medium StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main subHeaderLeftView"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="template-library"
              >
                <svg
                  height="20"
                  viewBox="0 0 12 13"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target Text--targetClass"
                >
                  <p
                    class="StyledProps--font StyledProps--main templateName StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold"
                    tabindex="0"
                  >
                    Test Template
                  </p>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey800"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="bp3-popover-wrapper DropDown--main versionDropDown"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                  data-testid="dropdown-button"
                  style="min-width: 130px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main container"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body"
                            style="--text-line-clamp: 1;"
                          >
                            v1
                          </p>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                COMMON.STABLE
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="bp3-icon bp3-icon-eye-open StyledProps--main StyledProps--color StyledProps--color-orange800"
                  icon="eye-open"
                >
                  <svg
                    data-icon="eye-open"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      eye-open
                    </desc>
                    <path
                      d="M8.002 7.003a1.003 1.003 0 000 2.005 1.003 1.003 0 000-2.005zm7.988.972v-.02-.01-.02-.02a.675.675 0 00-.17-.36c-.509-.673-1.118-1.264-1.737-1.806-1.328-1.173-2.846-2.155-4.523-2.546a6.702 6.702 0 00-2.925-.06c-.889.18-1.738.541-2.546.992C2.84 4.837 1.692 5.81.694 6.902c-.18.211-.36.411-.53.632a.742.742 0 000 .932c.51.672 1.119 1.264 1.738 1.805 1.328 1.173 2.846 2.156 4.523 2.547.968.23 1.947.24 2.925.04.889-.18 1.738-.542 2.546-.993 1.248-.712 2.397-1.684 3.395-2.777.18-.2.37-.411.54-.632.09-.1.149-.23.169-.36v-.02-.02-.01-.02-.03c0-.01-.01-.01-.01-.02zm-7.988 3.038a2.998 2.998 0 01-2.995-3.008 2.998 2.998 0 012.995-3.008 2.998 2.998 0 012.996 3.008 2.998 2.998 0 01-2.996 3.008z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-size-small"
                >
                  common.readonlyPermissions
                </p>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    aria-label="pipeline menu actions"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="currentColor"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="2"
                          cy="2"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="8"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="14"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot when template is updated 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-medium StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main subHeaderLeftView"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="template-library"
              >
                <svg
                  height="20"
                  viewBox="0 0 12 13"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <clippath
                    id="template-library_svg__a"
                  >
                    <path
                      d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7z"
                    />
                  </clippath>
                  <path
                    clip-path="url(#template-library_svg__a)"
                    d="M-5-5h22v23H-5z"
                    fill="#25a6f7"
                  />
                </svg>
              </span>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target Text--targetClass"
                >
                  <p
                    class="StyledProps--font StyledProps--main templateName StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold"
                    tabindex="0"
                  >
                    Test Template
                  </p>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey800"
                  data-icon="Edit"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="bp3-popover-wrapper DropDown--main versionDropDown"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                  data-testid="dropdown-button"
                  style="min-width: 130px;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                      data-testid="dropdown-value"
                      style="--text-line-clamp: 1;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main container"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body"
                            style="--text-line-clamp: 1;"
                          >
                            v1
                          </p>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                COMMON.STABLE
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </p>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                      data-icon="main-chevron-down"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 14 8"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main tagRender Button--with-current-color Button--iconOnly Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                unsavedChanges
              </span>
            </button>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="SplitButton--splitButton"
              >
                <button
                  aria-label="save"
                  class="bp3-button Button--button StyledProps--font StyledProps--main SplitButton--main border-right-0 Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="send-data"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 9 12"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                        fill="#25A6F7"
                      />
                      <path
                        d="M.5.775h7.005v.2H.5v-.2z"
                        stroke="#25A6F7"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    save
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main SplitButton--dropdown border-left-0 Button--with-current-color Button--iconOnly Button--withRightIcon Button--variation Button--variation-primary"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <button
                aria-label="common.discard"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    aria-label="pipeline menu actions"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="currentColor"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="2"
                          cy="2"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="8"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="14"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
